# harakiri-lib

./: .gitignore  LICENSE  README.md  harakiri-lib.cabal
src/Harakiri/: Compiler.hs  Expr.hs  IR.hs  Parser.hs  SourceCode.hs  TypeCheck.hs  Utils.hs
src/Harakiri/Compiler/: Architecture.hs  Compile.hs  LiveAnalysis.hs  RegisterAllocation.hs
src/Harakiri/Compiler/Architecture/: Aarch64.hs
src/Harakiri/Expr/: Annotated.hs  Interpreter.hs  Shorthands.hs  Types.hs
src/Harakiri/IR/: Interpreter.hs  Translate.hs  Types.hs
tests/: Common.hs  IRTranslateTests.hs  InterpreterTests.hs  Main.hs  ParserTests.hs  TypeCheckTests.hs
tests/cases/: case01.hk  case02.hk  case03.hk  case04.hk  case05.hk  case06.hk  case07.hk  case08.hk
tests/outputs/: case01  case02  case03  case04  case05  case06  case07  case08
