name:          harakiri-lib
version:       0.1.0.0
synopsis:      Library for harakiri language
description:   Library for harakiri language
homepage:      https://github.com/cyberfined/harakiri-lib
bug-reports:   https://github.com/cyberfined/harakiri-lib/issues
author:        cyberfined
maintainer:    cyberfined@protonmail.com
copyright:     Copyright (c) cyberfined
license:       OtherLicense
license-file:  LICENSE
category:      Compilers
build-type:    Simple
cabal-version: >= 1.12
extra-source-files:
    LICENSE
    README.md

source-repository head
  type:     git
  location: https://github.com/cyberfined/harakiri-lib

library
  exposed-modules:
      Harakiri.Expr
    , Harakiri.Parser
    , Harakiri.TypeCheck
    , Harakiri.IR
    , Harakiri.SourceCode
    , Harakiri.Compiler
    , Harakiri.Compiler.Architecture.Aarch64
  other-modules:
      Harakiri.Expr.Types
    , Harakiri.Expr.Annotated
    , Harakiri.Expr.Shorthands
    , Harakiri.Expr.Interpreter
    , Harakiri.IR.Types
    , Harakiri.IR.Translate
    , Harakiri.IR.Interpreter
    , Harakiri.Compiler.Architecture
    , Harakiri.Compiler.Compile
    , Harakiri.Compiler.LiveAnalysis
    , Harakiri.Compiler.RegisterAllocation
    , Harakiri.Utils
  hs-source-dirs:
      src
  ghc-options: -Wall
  default-extensions:
      OverloadedStrings
    , LambdaCase
  build-depends:
      base >= 4.7 && < 5
    , data-fix >= 0.3 && < 1
    , megaparsec >= 9 && < 10
    , parser-combinators >= 1.2 && < 2
    , text >= 1.2 && < 2
    , unordered-containers >= 0.2 && < 1
    , containers >= 0.6 && < 1
    , mtl >= 2.2 && < 3
    , array >= 0.5 && < 1
  default-language: Haskell2010

test-suite harakiri-lib-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      ParserTests
    , TypeCheckTests
    , IRTranslateTests
    , InterpreterTests
    , Common
  hs-source-dirs:
      tests
  ghc-options: -Wall
  default-extensions:
      OverloadedStrings
  build-depends:
      base >= 4.7 && < 5
    , HUnit >= 1.6 && < 2
    , text >= 1.2 && < 2
    , directory >= 1.3 && < 2
    , filepath >= 1.4 && < 2
    , harakiri-lib
  default-language: Haskell2010
